# 3DuF-server

./: Dockerfile  README.md  pyproject.toml
app/: app.py
partpipeline/: Droplet.stl  DropletGenerator.stl  DropletHeight.stl  Lshape.stl  Ports.stl  parser.py
partpipeline/threedprinting/: export.py  parts.py
partpipeline/threedprinting/components/: DropletGenerator.stl  Test.stl  Test2.stl  box.py  component.py  connection.py  droplet.py  droplet_generation.FCStd  port.py
partpipeline/threedprinting/components/sources/: DROPLET GENERATOR.FCStd  NOZZLE DROPLET GENERATOR.FCStd  PORT.FCStd
svg2stl/: Notes.md  fuse_graph_utils.py  svg2stl.py  svg2stl_outline.py  svg2stl_v2.py  svg2stl_v3.py  svg2stl_v4.py  test.stl
